{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 14,
  "lineage": "ca956d83-ab2f-b70c-bd84-4b5b39a68e21",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672534531507:vpc/vpc-0edbd187d65482beb",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-043980a3f635e96c7",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-040b4072303ce6850",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0edbd187d65482beb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b6a6d59aeb913894",
            "owner_id": "672534531507"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:672534531507:instance/i-014f4c6602180a6fc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014f4c6602180a6fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-076d40d15ae4b0132",
            "private_dns": "ip-172-31-87-254.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.87.254",
            "public_dns": "ec2-54-173-207-110.compute-1.amazonaws.com",
            "public_ip": "54.173.207.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0042bae54fa785c2f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nginx-security-grp"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1e5995fe42c90a4",
            "tags": {
              "Name": "nginx-ec2"
            },
            "tags_all": {
              "Name": "nginx-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a4a520e06c26c6df"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu2204"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:672534531507:loadbalancer/app/nginx-lb/25e0e2000741e08d",
            "arn_suffix": "app/nginx-lb/25e0e2000741e08d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-lb-228198803.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:672534531507:loadbalancer/app/nginx-lb/25e0e2000741e08d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a4a520e06c26c6df"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-092224c1441f71de6"
              },
              {
                "subnet_id": "subnet-09634b9cc5dac6992"
              },
              {
                "subnet_id": "subnet-0a603f428ebf3de12"
              },
              {
                "subnet_id": "subnet-0c376d73ba74a2ed3"
              },
              {
                "subnet_id": "subnet-0e191afc433f80918"
              },
              {
                "subnet_id": "subnet-0e1e5995fe42c90a4"
              }
            ],
            "subnets": [
              "subnet-092224c1441f71de6",
              "subnet-09634b9cc5dac6992",
              "subnet-0a603f428ebf3de12",
              "subnet-0c376d73ba74a2ed3",
              "subnet-0e191afc433f80918",
              "subnet-0e1e5995fe42c90a4"
            ],
            "vpc_id": "vpc-0edbd187d65482beb",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.nginx-security-grp",
            "data.aws_subnets.subnets",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:672534531507:listener/app/nginx-lb/25e0e2000741e08d/0ffe500966e122ba",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:672534531507:targetgroup/nginx-target-grp/399d555c417e34c7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:672534531507:listener/app/nginx-lb/25e0e2000741e08d/0ffe500966e122ba",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:672534531507:loadbalancer/app/nginx-lb/25e0e2000741e08d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx-lb",
            "aws_lb_target_group.nginx-target-grp",
            "aws_security_group.nginx-security-grp",
            "data.aws_subnets.subnets",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-target-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:672534531507:targetgroup/nginx-target-grp/399d555c417e34c7",
            "arn_suffix": "targetgroup/nginx-target-grp/399d555c417e34c7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:672534531507:targetgroup/nginx-target-grp/399d555c417e34c7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-target-grp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0edbd187d65482beb"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx-target-grp-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:672534531507:targetgroup/nginx-target-grp/399d555c417e34c7-20220921202926649200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:672534531507:targetgroup/nginx-target-grp/399d555c417e34c7",
            "target_id": "i-014f4c6602180a6fc"
          },
          "dependencies": [
            "aws_instance.nginx-ec2",
            "aws_lb_target_group.nginx-target-grp",
            "data.aws_ami.ubuntu2204",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-security-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672534531507:security-group/sg-0a4a520e06c26c6df",
            "description": "Security group for Nginx web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4a520e06c26c6df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-security-grp",
            "name_prefix": "",
            "owner_id": "672534531507",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-security-grp"
            },
            "tags_all": {
              "Name": "nginx-security-grp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0edbd187d65482beb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}